# pricone-re-synthesis

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.devcontainer/web/: devcontainer.json
.github/workflows/: build.yml  update-lab-submodule.yml
config/: roi.json
docs/: DEVELOPMENT.md  STATE_DIAGRAM.md
src/core/: automator.py  capture.py  constants.py  equipment_detector.py  evaluator.py  matcher.py  state_machine.py
src/data/: equipment_master.py  loader.py  models.py
src/gui/: main_window.py  widgets.py
tools/: build_templates.py  capture_templates.py
web/: .gitignore  Makefile  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  theme.ts
web/src/assets/: main.css
web/src/components/: CookieConsentBanner.vue
web/src/composables/: app-color-mode.ts  ga4.ts  releases.ts
web/src/stores/: cookie-consent.ts
web/src/types/: auto-imports.d.ts  components.d.ts
