[project]
name = "pricone-re-synthesis"
version = "1.1.0"
description = "プリンセスコネクト Re:Dive 究極錬成自動化ツール"
requires-python = ">=3.13"
dependencies = [
    "opencv-python",
    "PyQt6",
    "pywin32",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "opencv-python-headless",
]
build = [
    "nuitka",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["ANN"]  # ツールスクリプトは型注釈省略可
"src/gui/*" = ["ANN201"]  # PyQt6 スロットの戻り値注釈省略可

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true  # win32gui / pywin32 はコンテナ外のため
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true  # ツールスクリプトは型チェック対象外
